# slovak-train-delay-prediction

./: .gitignore  README.md
analysis/: .gitignore  README.md  analyze.ipynb  my_notebook.ipynb  pyproject.toml  quick.py  station_mapping.csv  zsr_graph.graphml
analysis/data/: station_coords.csv
analysis/docs/: data_dictionary.md
analysis/notebooks/: analyze.ipynb  analyze_clean.ipynb  first_attempt.ipynb  make_parquet.ipynb
analysis/outputs/maps/: backup_2_zsr_network_map.html  backup_zsr_network_map.html  train_network.html  zsr_graph.graphml  zsr_network_map.html
analysis/scripts/: quick.py
data_gathering/: .env.sample  .gitignore  database.py  discord.py  main.py  parser.py  pyproject.toml  scrape.py
data_processing/: .gitignore  README.md  database.py  graph_creation.py  pyproject.toml
timetable_downloader/: database.py  discord.py  main.py  pyproject.toml  scrape.py
